pihole/deploy.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: pihole
    name: pihole
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: pihole
    template:
      metadata:
        labels:
          app: pihole
      spec:
        containers:
        - env:
          - name: WEB_PORT
            value: "80"
          - name: VIRTUAL_HOST
            value: pihole.pazon.xyz
          - name: WEBPASSWORD
            valueFrom:
              secretKeyRef:
                key: password
                name: pihole-password
          - name: PIHOLE_DNS_
            value: 1.1.1.1;1.0.0.1
          image: pihole/pihole:v5.8.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /admin.index.php
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: pihole
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 53
            name: dns
            protocol: TCP
          - containerPort: 53
            name: dns-udp
            protocol: UDP
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 67
            name: client-udp
            protocol: UDP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /admin.index.php
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/pihole
            name: config
          - mountPath: /etc/dnsmasq.d/02-custom.conf
            name: custom-dnsmasq
            subPath: 02-custom.conf
          - mountPath: /etc/addn-hosts
            name: custom-dnsmasq
            subPath: addn-hosts
          - mountPath: /etc/dnsmasq.d/05-pihole-custom-cname.conf
            name: custom-dnsmasq
            subPath: 05-pihole-custom-cname.conf
        dnsConfig:
          nameservers:
          - 127.0.0.1
          - 8.8.8.8
        dnsPolicy: None
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole-vol
        - configMap:
            defaultMode: 420
            name: pihole-custom-dnsmasq
          name: custom-dnsmasq
